# pdf-craft

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  update.yml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/pdf-to-epub/: .flow.ui.oo.json  flow.oo.yaml
flows/pdf-to-markdown/: .flow.ui.oo.json  flow.oo.yaml
flows/playground/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
shared/: __init__.py  cloud_extractor.py  convert_cloud_response.py  extractor_build.py
subflows/pdf2epub/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/analyse_pdf/: __init__.py  cache.py  reporter.py  task.oo.yaml
tasks/generate_epub/: __init__.py  task.oo.yaml
tasks/pdf-to-markdown/: __init__.py  task.oo.yaml
